--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -16,3 +16,16 @@ h1, h2, h3, h4, h5, h6 {
   margin:0;
   padding:0;
 }
+
+body {
+  background: image_url('footer_lodyas.png');
+  font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
+}
+
+.navbar {
+  background: image_url('triangular_@2X.png');
+  border-radius: 0;
+  box-shadow: 0px 1px 3px #2a2a2a;
+  -webkit-box-shadow: 0px 1px 3px #2a2a2a;
+  -moz-box-shadow: 0px 1px 3px #2a2a2a;
+}
