--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -29,3 +29,9 @@ body {
   -webkit-box-shadow: 0px 1px 3px #2a2a2a;
   -moz-box-shadow: 0px 1px 3px #2a2a2a;
 }
+
+.navbar-inverse .navbar-brand {
+  color: #C94D4F;
+  font-family: 'kaushan_scriptregular';
+  font-size: 26px;
+}
