--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -35,3 +35,16 @@ body {
   font-family: 'kaushan_scriptregular';
   font-size: 26px;
 }
+
+.pagination {
+  width: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: 'kaushan_scriptregular';
+  color: #8A96AB;
+}
+
+.pagination * {
+  margin-left: 10px;
+}
+
