--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -51,7 +51,10 @@ body {
 }
 
 .help-block {
-  opacity: 0.4;
+  color: #ff3333;
+  background-color: #FFEEEE;
+  border-radius: 3px;
+  padding: 2px 8px 2px 8px
 }
 
 abbr {
