Adding comments to web application

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -66,9 +66,11 @@ abbr {
 #map {
   height: 300px;
 }
-/* Optional: Makes the sample page fill the window. */
+/* Optional: Makes the sample page fill the window. For map.
 html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-}
+}*/
+
+
