--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,9 +1,20 @@
 <div class="booyah-box col-10 offset-1">
+  <div>
+    <!-- Photos get displayed threw here -->
+    <% @place.photos.each do |photo| %>
+      <%= image_tag photo.picture, class: 'img-responsive' %>
+      <%= photo.caption %>
+    <% end %>
+  </div>
+
+
+
   <h1><%= @place.name %></h1>
   <i><%= @place.address %></i>
   <br/><br/>
   <p><%= @place.description %></p>
 
+  <!-- Latitude and Longitude -->
   <% if @place.latitude.present? && @place.longitude.present? %>
 
     <script>
@@ -33,8 +44,12 @@
   <br />
 
 
+
+  <!-- Edit and Delete buttons -->
   <div class="float-right">
     <% if current_user && current_user == @place.user %>
+      <!-- Pic Button trigger modal -->
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myPicModal">Load Picture</button>
       <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
       <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
     <% end %>
@@ -42,7 +57,29 @@
   <div class="clear"></div>
 </div>
 
-<!-- Modal -->
+<!-- Comment Button trigger modal -->
+<div class="col-10 offset-1">
+  <h1 class="float-left comment">Comments</h1>
+  <button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#myModal">Add a comment</button>
+</div>
+<div class="clear"></div>
+
+<!-- comments placed on show page code -->
+<div class="row">
+  <% @place.comments.each do |comment| %>
+    <div class="col-12 col-sm-6">
+      <blockquote>
+        <% if comment.humanized_rating.present? %>
+          <b><%= comment.humanized_rating %></b> -
+        <% end %>
+        <%= comment.message %>
+        <small><%= comment.user.email %></small>
+      </blockquote>
+    </div>
+  <% end %>
+</div>
+
+<!-- Comment Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -52,6 +89,7 @@
         </button>
         <h4 class="modal-title" id="myModalLabel">Add a comment</h4>
       </div>
+
       <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
         <div class="modal-body">
           <%= f.input :message %>
@@ -66,27 +104,36 @@
   </div>
 </div>
 
-<div class="col-10 offset-1">
-  <h1 class="float-left">Comments</h1>
-  <!-- Button trigger modal -->
-  <button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#myModal">Add a comment</button>
-</div>
+<!-- pic Modal -->
+<div class="modal fade" id="myPicModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+      <!-- form for pictures-->
+      <%= simple_form_for @photo, url: '#' do |f| %>
+        <div class="modal-body">
+          <%= f.input :caption %>
+          <%= f.input :picture %>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+        </div>
+      <% end %>
 
-<div class="clear"></div>
-
-<div class="row">
-  <% @place.comments.each do |comment| %>
-    <div class="col-12 col-sm-6">
-      <blockquote>
-        <% if comment.humanized_rating.present? %>
-          <b><%= comment.humanized_rating %></b> -
-        <% end %>
-        <%= comment.message %>
-        <small><%= comment.user.email %></small>
-      </blockquote>
     </div>
-  <% end %>
+  </div>
 </div>
+
+
+
+
 
 
 
