--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -2,7 +2,7 @@
   <div>
     <!-- Photos get displayed threw here -->
     <% @place.photos.each do |photo| %>
-      <%= image_tag photo.picture, class: 'img-responsive' %>
+      <%= image_tag photo.picture, class: "img" %>
       <%= photo.caption %>
     <% end %>
   </div>
@@ -50,7 +50,9 @@
     <% if current_user && current_user == @place.user %>
       <!-- Pic Button trigger modal -->
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myPicModal">Load Picture</button>
+
       <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
+
       <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
     <% end %>
   </div>
@@ -109,21 +111,21 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Add a picture</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
       <!-- form for pictures-->
-      <%= simple_form_for @photo, url: '#' do |f| %>
+      <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
         <div class="modal-body">
           <%= f.input :caption %>
           <%= f.input :picture %>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+          <%= f.submit "Add picture", class: 'btn btn-primary' %>
         </div>
       <% end %>
 
