adjusted index pic size

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -24,7 +24,7 @@
     <!-- Picture -->
     <% if place.photos.present? %>
       <div class="col-xs-10">
-        <%= image_tag place.photos.last.picture %>
+        <%= image_tag place.photos.last.picture, class: 'img' %>
       </div>
     <% end %>
   </div>
