Making the slider look good

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -5,13 +5,13 @@
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-      <%= image_tag 'IMG_1074.jpg' %>
+      <%= image_tag 'IMG_1074_2.jpg', class: 'img-fluid' %>
       <div class="carousel-caption">
         Find the best pizza places
       </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag 'IMG_0953.jpg' %>
+      <%= image_tag 'IMG_0953_2.jpg', class: 'img-fluid' %>
       <div class="carousel-caption">
         One Piece
       </div>
