--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -30,12 +30,14 @@ body {
   box-shadow: 0px 1px 3px #2a2a2a;
   -webkit-box-shadow: 0px 1px 3px #2a2a2a;
   -moz-box-shadow: 0px 1px 3px #2a2a2a;
+
 }
 
 .navbar-inverse .navbar-brand {
   color: #C94D4F;
   font-family: 'kaushan_scriptregular';
   font-size: 26px;
+  margin-bottom: 0;
 }
 
 .pagination {
@@ -106,4 +108,26 @@ blockquote p {
   height: auto;
 }
 
+.carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+  max-height: 550px;
+  line-height: 1;
+}
+
+.carousel-caption {
+  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 60px;
+  font-weight: 100;
+  text-shadow: rgba(0, 0, 0, 0.95) 2px 2px;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  position: absolute;
+  left: 0;
+}
+
+.carousel {
+  box-shadow: 0px 3px 8px #2a2a2a;
+}
 
