--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,12 @@
-<div class="booyah-box">
+<!-- User info -->
+<div class="booyah-box user-backgrnd">
   <div class="row">
     <div class="col-4">
       <%= image_tag 'user.png' %>
     </div>
 
     <div class="col-8">
-      <h1><%= @user.email %></h1>
+      <h1 class='wrap-word'><%= @user.email %></h1>
       <h3>Member Since: <%= @user.created_at.strftime("%B %d, %Y") %></h3>
       <h4><%= @user.comments.count %> total comments</h4>
       <h4><%= @user.comments.where(rating: '5_stars').count %> total 5 star reviews</h4>
@@ -13,14 +14,14 @@
   </div>
   <div class="clear"></div>
 </div>
-
+<!-- Comments -->
 <br /><br />
-<h1 class="text-center">My Comments</h1>
+<h1 class="text-center color">My Comments</h1>
 <br /><br />
-<div class="row">
+<div class="row comment-backgrnd">
   <% @user.comments.each do |comment| %>
     <div class="col-12 col-sm-6">
-      <h2 class="text-center"><%= link_to comment.place.name, place_path(comment.place) %></h2>
+      <h2 class="text-center text-size"><%= link_to comment.place.name, place_path(comment.place) %></h2>
       <blockquote>
         <% if comment.humanized_rating.present? %>
           <b><%= comment.humanized_rating %></b> -
@@ -31,16 +32,16 @@
     </div>
   <% end %>
 </div>
-
+<!-- My places -->
 <div class="clear"></div>
 <br /><br />
-<h2 class="text-center">My Places</h2>
+<h2 class="text-center color">My Places</h2>
 <br /><br />
 <% @user.places.each do |place| %>
   <div class="booyah-box col-10 offset-1">
     <h1><%= link_to place.name, place_path(place) %></h1><br />
     <i><%= place.address %></i><br />
-    <p><%= place.description %></p><br />
+    <p class="wrap-word"><%= place.description %></p><br />
 
     <% if place.user.present? %>
       <small><%= place.user.email %></small>
